<resources>
    <string name="app_name">EduConnect</string>
    <string name="appSlogan">Bridging Minds, Building Futures</string>
    <string name="nav_header_logo">School Logo</string>
    <string name="nav_subtitle">Student Management System</string>
    <string name="menu_add_student">Add Student</string>
    <string name="menu_edit_student">Edit Student Record</string>
    <string name="menu_delete_student">Delete Student Record</string>
    <string name="menu_view_records">View All Records</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="teacher_dashboard_title">Teacher Dashboard</string>
    <string name="teacher_schedule_title">My Schedule</string>
    <string name="teacher_messages_title">Messages</string>
    <string name="teacher_grades_title">Publish Grades</string>
    <string name="publish_grades">Publish Grades</string>
    <string name="submit">Submit</string>
    <string name="course_icon_description">Course icon</string>
    <string name="edit_schedule_description">Edit schedule</string>
    <string name="no_classes_scheduled">No classes scheduled for this day</string>
    <string name="empty_schedule_description">Empty schedule illustration</string>
    <string name="publish_grades_title">Publish Student Grades</string>
    <string name="select_course_description">Select course</string>
    <string name="select_assessment_type_description">Select assessment type</string>
    <string name="enter_percentage">Assessment Weight (%)</string>
    <string name="enter_grade">Grade (0-100)</string>
    <string name="submit_grades">Submit Grades</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_dashboard">Teacher Dashboard</string>
    <string name="my_schedule">Class Schedule</string>
    <string name="messages">Messages</string>
    <string name="students_icon_description">students_icon_description</string>
    <string name="calendar_icon_description">calendar_icon_description</string>
    <string name="location_icon_description">location_icon_description</string>
    <string name="time_icon_description">time_icon_description</string>
    <string name="select_class">select_class</string>
    <string name="select_assessment">select_assessment</string>
    <string name="grades_breakdown">grades_breakdown</string>
    <string name="class_rank">class_rank</string>
    <string name="percentage">percentage</string>
    <string name="final_grade">final_grade</string>
    <string name="overall_grade">overall_grade</string>
    <string name="back">back</string>
    <string name="search_courses">search_courses</string>
    <string name="my_courses">my_courses</string>
    <string name="current_grade">Current Grade</string>
    <string name="view_grades">view_grades</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_class_prompt">Select class</string>
    <string name="no_grades_available">No grades available</string>
    <string-array name="assignment_filter_options">
        <item>All Assignments</item>
        <item>Pending</item>
        <item>Submitted</item>
    </string-array>
</resources>